# TodoApp-Claude

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py  mypy.ini  pyproject.toml
.claude/: settings.json
.claude/PRPs-commands/: prp-base-create.md  prp-spec-create.md  prp-task-create.md
.claude/commands/: prp-planning-create.md
.claude/hooks/: play_audio.py
.github/workflows/: ci.yml
PRPs/: todo-app-implementation.md  todo-app-prd.md
PRPs/ai_docs/: async-sqlalchemy-patterns.md  fastapi-best-practices.md
alembic/: env.py
docs/: PRD.md
docs/tasks/: 01-domain-layer.md  02-infrastructure-layer.md  03-application-layer.md  04-interface-layer.md  05-testing-qa.md
src/: main.py  todo_app.py
src/application/: __init__.py  config.py  todo_service.py  validation_service.py
src/application/dto/: __init__.py  todo_dto.py
src/application/use_cases/: __init__.py  create_todo_use_case.py  delete_todo_use_case.py  get_todo_use_case.py  list_todos_use_case.py  update_todo_use_case.py
src/domain/: __init__.py  exceptions.py  priority.py  repository.py  todo.py
src/infrastructure/: __init__.py  file_handler.py  json_repository.py  repository_factory.py  xml_repository.py
src/interfaces/: __init__.py  console_interface.py  console_utils.py  format_selector.py  main.py
src/todo_app/: config.py
src/todo_app/api/: dependencies.py  main.py  schemas.py
src/todo_app/api/routes/: todos.py
src/todo_app/console/: commands.py  main.py  ui.py
src/todo_app/database/: connection.py  models.py  repository.py
src/todo_app/domain/: exceptions.py  models.py
src/todo_app/services/: todo_service.py
tests/: conftest.py  test_todo_app.py
tests/application/: test_config.py  test_todo_service.py  test_validation_service.py
tests/application/dto/: test_todo_dto.py
tests/application/use_cases/: test_create_todo_use_case.py  test_delete_todo_use_case.py  test_get_todo_use_case.py  test_list_todos_use_case.py  test_update_todo_use_case.py
tests/domain/: test_exceptions.py  test_priority.py  test_repository.py  test_todo.py
tests/infrastructure/: test_file_handler.py  test_json_repository.py  test_repository_factory.py  test_xml_repository.py
tests/integration/: __init__.py  test_api_endpoints.py  test_full_application.py
tests/interfaces/: __init__.py  test_console_interface.py  test_console_utils.py  test_format_selector.py  test_main.py
tests/unit/: test_domain_models.py  test_todo_service.py
